added enlightenment as dep for backgrounds

--- a/bodhi-background-zen/DEBIAN/control
+++ b/bodhi-background-zen/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: bodhi-background-zen
-Version: 0.01
+Version: 0.02
 Architecture: all
 Maintainer: Doug Yanez <Deepspeed@bodhilinux.com>
-Depends:
+Depends: enlightenment
 Section: unknown
 Priority: optional
 Homepage: http://bodhilinux.com
