--- a/bodhi-background-pink-flush/DEBIAN/control
+++ b/bodhi-background-pink-flush/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: bodhi-background-pink-flush
-Version: 0.01
+Version: 0.02
 Architecture: all
 Maintainer: Doug Yanez <Deepspeed@bodhilinux.com>
-Depends: enlightenment
+Depends:
 Section: unknown
 Priority: optional
 Homepage: http://bodhilinux.com
